# rusic_server_htmx

./: Cargo.toml  clean.sh
src/: envvars.rs  main.rs  server.rs  setup.rs  types.rs
src/rusicdb/: db_main.rs  db_tables.rs
src/server/: fragments.rs  server_functions.rs
src/setup/: rusic_artist.rs  rusic_process_music.rs  rusic_process_music_images.rs  rusic_utils.rs  rusic_walk_dirs.rs
